chapter6/ext-sql-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sql-db      
  name: sql-db
  namespace: finance
  ports:
  - port: 1433
    protocol: TCP
    targetPort: 1433
    name: sql
  selector: sql
    app: sql-app
  type: ClusterIP
